force-app/main/default/objects/Lead_Score_Model__c/Lead_Score_Model__c.object-meta.xml
<CustomObject>
    <label>Lead Score Model</label>
    <nameField>
        <label>Lead Score Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Score Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>