force-app/main/default/objects/Lead_Score_Model__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>List of Industries</description>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>