force-app/main/default/objects/Lead_Score_Model__c/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Lead Score on the basis of Industry, number of employees &amp; Purpose basis</description>
    <label>Lead Score</label>
    <length>120</length>
    <type>Text</type>
</CustomField>