force-app/main/default/objects/Lead_Score_Model__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Employees in the company</description>
    <label>Number of Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>