force-app/main/default/objects/Lead_Score_Model__c/fields/Potential_Basis_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Potential_Basis_Lead_Score__c</fullName>
    <formula>Industry__c +  What_is_the_purpose_use__c +  Number_of_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Basis Lead Score</label>
    <type>Text</type>
</CustomField>