force-app/main/default/objects/Lead_Score_Model__c/fields/What_is_the_purpose_use__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_purpose_use__c</fullName>
    <description>Purpose of using product</description>
    <label>What is the purpose/use?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>